# test-gmock-2

./: CMakeLists.txt  README.md
include/: AtmMachine.hpp  BankServer.hpp  Example.hpp
src/: AtmMachine.cpp  Example.cpp
test/: CMakeLists.txt  example_test.cpp  example_test_1.cpp  example_test_2.cpp  example_test_3.cpp  example_test_4.cpp  example_test_5.cpp  example_test_6.cpp  example_test_7.cpp  example_test_8.cpp
test/mock/: MockBankServer.hpp
